Fixed small screen alignment

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -33,6 +33,10 @@
     font-size: calc(0.8 * var(--bs-body-font-size));
 }
 
+.form-control.expense-amount.is-invalid {
+    padding-right: calc(1.5rem) !important;
+}
+
 .budget-form input-group {
     padding-left: 0 !important;
 }
